test: expand keynote service coverage